--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1,14 +1,10 @@
-# yelp zh_CN.po.
-# Copyright (C) 2002 Free Software Foundation, Inc.
-# Zipeco <Zipeco@btamail.net.cn>, 2002.
-# Funda Wang <fundawang@en2china.com>, 2003
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-02-04 17:19-0600\n"
-"PO-Revision-Date: 2003-08-27 16:39+0800\n"
-"Last-Translator: Funda Wang <fundawang@en2china.com>\n"
+"POT-Creation-Date: 2004-02-09 04:42+0100\n"
+"PO-Revision-Date: 2004-01-15 11:14+0800\n"
+"Last-Translator: 周延潮 <75jan@163.com>\n"
 "Language-Team: zh_CN <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -16,100 +12,88 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "应用程序"
+msgstr "小程序"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "应用程序"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - 桌面"
+msgstr "桌面"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "开发"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "开发"
+msgstr "开发环境"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "开发"
+msgstr "开发工具"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/编辑(_E)"
+msgstr "编辑器"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "应用程序"
+msgstr "教育应用程序"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "游戏与娱乐"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "常规"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "帮助目录"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "应用程序"
+msgstr "Internet 应用程序"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "内核例程"
+msgstr "内核"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "应用程序"
+msgstr "多媒体应用程序"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "办公和生产应用程序"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "应用程序"
+msgstr "科学应用程序"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "安全"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "系统调用"
+msgstr "系统"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "实用程序"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "应用程序"
+msgstr "X 应用程序"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -117,15 +101,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "区分大小写(_A)"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "查找"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "查找(_F)："
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -137,7 +121,7 @@ msgstr "上一页(_P)"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "自动换行(_W)"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -149,49 +133,45 @@ msgstr "Yelp 工厂"
 
 #: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "在 yelp:document 中未发现 href 属性"
 
 #: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "内存溢出"
 
-#: src/yelp-db-pager.c:627 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:631 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "标题页"
 
-#: src/yelp-db-pager.c:629 stylesheets/l10n.xml.in.h:30
+#: src/yelp-db-pager.c:633 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
 msgid "Contents"
 msgstr "目录"
 
-#: src/yelp-db-pager.c:647 stylesheets/l10n.xml.in.h:68
+#: src/yelp-db-pager.c:651 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "未知"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "文档“%s”不存在"
+msgstr "无法打开选中的文档"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "文档“%s”不存在"
+msgstr "无法在此文档中找到选中页。"
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "文档“%s”不存在"
+msgstr "无法读取目录。"
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "不再支持 DocBook SGML 文档。"
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "文档“%s”不存在"
+msgstr "选中的文件无法读取。"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -204,7 +184,7 @@ msgstr "无法激活 Yelp：“%s”"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr "不能打开新窗口。"
+msgstr "无法打开新窗口。"
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
@@ -268,22 +248,21 @@ msgid "System Administration"
 msgstr "系统管理"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "文档"
+msgstr "文档 URI"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "要处理文档的 URI"
 
 #: src/yelp-toc-pager.c:266
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: 暂停数为负数。"
 
 #: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "无法激活 Yelp：“%s”"
+msgstr "无法装入 OME 文件：“%s”。"
 
 #: src/yelp-toc-pager.c:892
 msgid "Categories"
@@ -310,19 +289,16 @@ msgid "/_Edit"
 msgstr "/编辑(_E)"
 
 #: src/yelp-window.c:257
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/编辑(E)/在页面中查找(_F)..."
+msgstr "/编辑(E)/查找(_F)..."
 
 #: src/yelp-window.c:260
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/编辑(E)/再次查找(_F)"
+msgstr "/编辑(E)/查找下一个(_X)"
 
 #: src/yelp-window.c:263
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/编辑(E)/再次查找(_F)"
+msgstr "/编辑(E)/查找上一个(_V)"
 
 #: src/yelp-window.c:267
 msgid "/_Go"
@@ -341,24 +317,20 @@ msgid "/Go/_Home"
 msgstr "/转到(G)/首页(_H)"
 
 #: src/yelp-window.c:277
-#, fuzzy
 msgid "/Go/"
-msgstr "/转到(_G)"
+msgstr "/转到(G)/"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "上一页(_P)"
+msgstr "/转到(G)/上一页(_P)"
 
 #: src/yelp-window.c:281
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/转到(G)/索引(_I)"
+msgstr "/转到(G)/下一页(_N)"
 
 #: src/yelp-window.c:284
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "目录"
+msgstr "/转到(G)/目录(_C)"
 
 #: src/yelp-window.c:288
 msgid "/_Help"
@@ -372,7 +344,7 @@ msgstr "/帮助(H)/关于(_A)"
 msgid "Help Browser"
 msgstr "帮助浏览器"
 
-#: src/yelp-window.c:569 stylesheets/l10n.xml.in.h:60
+#: src/yelp-window.c:569 stylesheets/l10n.xml.in.h:61
 msgid "Section"
 msgstr "章节"
 
@@ -410,7 +382,8 @@ msgstr "正在载入..."
 msgid "translator_credits"
 msgstr ""
 "Zipeco <Zipeco@btamail.net.cn>, 2002\n"
-"Funda Wang <fundawang@en2china.com>, 2003"
+"Funda Wang <fundawang@en2china.com>, 2003\n"
+"Jan2xue <75jan@163.com> 2003"
 
 #: src/yelp-window.c:1295
 msgid "A Help Browser for GNOME"
@@ -418,127 +391,115 @@ msgstr "GNOME 的帮助浏览器"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
-#, fuzzy
 msgid "About This Article"
-msgstr "关于此文档"
+msgstr "关于此文章"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "关于此参考书目"
 
 #: stylesheets/l10n.xml.in.h:7
-#, fuzzy
 msgid "About This Book"
-msgstr "关于此文档"
+msgstr "关于此书"
 
 #: stylesheets/l10n.xml.in.h:8
-#, fuzzy
 msgid "About This Chapter"
-msgstr "关于此文档"
+msgstr "关于此章"
 
 #: stylesheets/l10n.xml.in.h:9
-#, fuzzy
 msgid "About This Entry"
-msgstr "关于此文档"
+msgstr "关于此条目"
 
 #: stylesheets/l10n.xml.in.h:10
-#, fuzzy
 msgid "About This Glossary"
-msgstr "关于此文档"
+msgstr "关于此字典"
 
 #: stylesheets/l10n.xml.in.h:11
-#, fuzzy
 msgid "About This Index"
-msgstr "关于此文档"
+msgstr "关于此索引"
 
 #: stylesheets/l10n.xml.in.h:12
-#, fuzzy
 msgid "About This Part"
-msgstr "关于此文档"
+msgstr "关于此部分"
 
 #: stylesheets/l10n.xml.in.h:13
-#, fuzzy
 msgid "About This Preface"
-msgstr "关于此文档"
+msgstr "关于此前言"
 
 #: stylesheets/l10n.xml.in.h:14
-#, fuzzy
 msgid "About This Reference"
-msgstr "关于此文档"
+msgstr "关于此参考"
 
 #: stylesheets/l10n.xml.in.h:15
-#, fuzzy
 msgid "About This Section"
-msgstr "关于此文档"
+msgstr "关于此段"
 
 #: stylesheets/l10n.xml.in.h:16
-#, fuzzy
 msgid "About This Set"
-msgstr "关于此文档"
+msgstr "关于此集"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "应用程序"
+msgstr "加盟"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "附录"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "文章"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "受众"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "作者"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "作者"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "参考书目"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "名簿"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "警示"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "章"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "合作者"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "合作者"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
@@ -546,45 +507,43 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "版权"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "版权"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "日期"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "章节"
+msgstr "贡献"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/编辑(_E)"
+msgstr "编辑器"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "电子邮件"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "示例"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "图"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "词典"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "重要"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -592,105 +551,107 @@ msgstr "索引"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "法律声明"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "级别"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "消息受众"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "信息级别"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "信息来源"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "注解"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "源"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "别的贡献者"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "别的贡献者"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "部分"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "前言"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "出版者"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "出版者"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "参考"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "参考条目"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "参考部分"
 
 #: stylesheets/l10n.xml.in.h:59
-msgid "Revision History"
-msgstr ""
+msgid "Release Information"
+msgstr "版本信息"
 
-#: stylesheets/l10n.xml.in.h:61
-msgid "See"
-msgstr ""
+#: stylesheets/l10n.xml.in.h:60
+msgid "Revision History"
+msgstr "修订历史"
 
 #: stylesheets/l10n.xml.in.h:62
-msgid "See Also"
-msgstr ""
+msgid "See"
+msgstr "见"
 
 #: stylesheets/l10n.xml.in.h:63
-#, fuzzy
-msgid "Set Index"
-msgstr "索引"
+msgid "See Also"
+msgstr "另见"
 
 #: stylesheets/l10n.xml.in.h:64
-msgid "Table"
-msgstr ""
+msgid "Set Index"
+msgstr "设置索引"
 
 #: stylesheets/l10n.xml.in.h:65
-#, fuzzy
-msgid "Table of Contents"
-msgstr "帮助目录"
+msgid "Table"
+msgstr "表格"
 
 #: stylesheets/l10n.xml.in.h:66
-msgid "Tip"
-msgstr ""
+msgid "Table of Contents"
+msgstr "目录"
 
 #: stylesheets/l10n.xml.in.h:67
-msgid "Title"
-msgstr ""
+msgid "Tip"
+msgstr "提示"
 
-#: stylesheets/l10n.xml.in.h:69
+#: stylesheets/l10n.xml.in.h:68
+msgid "Title"
+msgstr "标题"
+
+#: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "警告"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -700,60 +661,3 @@ msgstr "获得 GNOME 的帮助"
 msgid "Help"
 msgstr "帮助"
 
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "文档“%s”不存在"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>查找文档中的文字：</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "自动换行(_W)"
-
-#~ msgid "Find text..."
-#~ msgstr "查找文字..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "匹配整个单词(_E)"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "区分大小写(_M)"
-
-#~ msgid "_Search for:"
-#~ msgstr "查找(_S)："
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - 桌面"
-
-#~ msgid "Additional documents"
-#~ msgstr "附加文档"
-
-#~ msgid "Manual Pages"
-#~ msgstr "手册页"
-
-#~ msgid "Info Pages"
-#~ msgstr "信息页"
-
-#~ msgid "Manual pages"
-#~ msgstr "手册页"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME 是"
-
-#~ msgid "Free Software"
-#~ msgstr "自由软件"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "正在载入..."
-
-#~ msgid "Previous"
-#~ msgstr "上一页"
-
-#~ msgid "Next"
-#~ msgstr "下一页"
-
-#~ msgid "Search in the index"
-#~ msgstr "在索引中搜索"
