--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-12  Arafat Medini  <lumina@silverpen.de>
+                                                                                
+        * ar.po: Updated Arabic translation.
+                                                                                
 2004-02-11  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
