--- a/po/ar.po
+++ b/po/ar.po
@@ -10,18 +10,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-02-10 03:17-0600\n"
-"PO-Revision-Date: 2004-01-10 01:16+0100\n"
+"POT-Creation-Date: 2004-01-26 05:22+0100\n"
+"PO-Revision-Date: 2004-02-04 15:38+0100\n"
 "Last-Translator: Arafat Medini <lumina@silverpen.de>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "تطبيقات"
+msgstr "بريمجات"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
@@ -92,9 +91,8 @@ msgid "Securities"
 msgstr "أوراق مالية"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "نداءات النظام"
+msgstr "النظام"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
@@ -148,29 +146,27 @@ msgstr "لم يوجد إسناد href عند مستند:يالب"
 msgid "Out of memory"
 msgstr "الذاكرة غير كافية"
 
-#: src/yelp-db-pager.c:631 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:627 src/yelp-man-pager.c:370
 msgid "Titlepage"
 msgstr "عنوان الصفحة"
 
-#: src/yelp-db-pager.c:633 stylesheets/l10n.xml.in.h:30
+#: src/yelp-db-pager.c:629 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
 msgid "Contents"
 msgstr "المحتويات"
 
-#: src/yelp-db-pager.c:651 stylesheets/l10n.xml.in.h:69
+#: src/yelp-db-pager.c:647 stylesheets/l10n.xml.in.h:68
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
 msgstr "مجهول"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "لم يمكن فتح المستند '%s'"
+msgstr "لم يمكن فتح المستند المنتقى"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "لم يمكن ايجاد الصفحة '%s' في هذا المستند"
+msgstr "لم يمكن ايجاد الصفحة المنتقات في هذا المستند."
 
 #: src/yelp-error.c:58
 msgid "The table of contents could not be read."
@@ -181,9 +177,8 @@ msgid "DocBook SGML documents are no longer supported."
 msgstr "مستند DocBook·SGML لم تعد مدعومة"
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "لم يمكن قراءة جدول المحتويات."
+msgstr "لم يمكن قراءة الملف المنتقى."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -272,9 +267,9 @@ msgid "YelpTocPager: Pause count is negative."
 msgstr "YelpTocPager: تعداد الإيقاف المؤقت سلبي."
 
 #: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "لم يمكن تنشيط يالب: '%s'"
+msgstr "لم يمكن تحميل ملف OMF '%s'."
 
 #: src/yelp-toc-pager.c:892
 msgid "Categories"
@@ -284,283 +279,278 @@ msgstr "التصنيفات"
 msgid "Documents"
 msgstr "المستندات"
 
-#: src/yelp-window.c:248
+#: src/yelp-window.c:231
 msgid "/_File"
 msgstr "/م_لف"
 
-#: src/yelp-window.c:249
+#: src/yelp-window.c:232
 msgid "/File/_New window"
 msgstr "/ملف/نافذة جد_يدة"
 
-#: src/yelp-window.c:252
+#: src/yelp-window.c:235
 msgid "/File/_Close window"
 msgstr "/ملف/_غلق النافذة"
 
-#: src/yelp-window.c:256
+#: src/yelp-window.c:239
 msgid "/_Edit"
 msgstr "/_تحرير"
 
-#: src/yelp-window.c:257
+#: src/yelp-window.c:240
 msgid "/Edit/_Find..."
 msgstr "/تحرير/_بحث عن التالي..."
 
-#: src/yelp-window.c:260
+#: src/yelp-window.c:243
 msgid "/Edit/Find Ne_xt"
 msgstr "/تحرير/_بحث عن التالي..."
 
-#: src/yelp-window.c:263
+#: src/yelp-window.c:246
 msgid "/Edit/Find Pre_vious"
 msgstr "/تحرير/_بحث عن السابق..."
 
-#: src/yelp-window.c:267
+#: src/yelp-window.c:250
 msgid "/_Go"
 msgstr "/اذ_هب"
 
-#: src/yelp-window.c:268
+#: src/yelp-window.c:251
 msgid "/Go/_Back"
 msgstr "/اذهب/_خلف"
 
-#: src/yelp-window.c:271
+#: src/yelp-window.c:254
 msgid "/Go/_Forward"
 msgstr "/اذهب/تق_دّم"
 
-#: src/yelp-window.c:274
+#: src/yelp-window.c:257
 msgid "/Go/_Home"
 msgstr "/اذهب/_منزل"
 
-#: src/yelp-window.c:277
+#: src/yelp-window.c:260
 msgid "/Go/"
 msgstr "/اذهب"
 
-#: src/yelp-window.c:278
-#, fuzzy
+#: src/yelp-window.c:261
 msgid "/Go/_Previous Page"
-msgstr "/اذهب/ال_سابق"
+msgstr "/اذهب/الصفحة ال_سابقة"
 
-#: src/yelp-window.c:281
-#, fuzzy
+#: src/yelp-window.c:264
 msgid "/Go/_Next Page"
-msgstr "/اذهب/ال_تالي"
+msgstr "/اذهب/الصفحة ال_تالية"
 
-#: src/yelp-window.c:284
+#: src/yelp-window.c:267
 msgid "/Go/_Contents"
 msgstr "/اذهب/ال_محتويات"
 
-#: src/yelp-window.c:288
+#: src/yelp-window.c:271
 msgid "/_Help"
 msgstr "/_مساعدة"
 
-#: src/yelp-window.c:289
+#: src/yelp-window.c:272
 msgid "/Help/_About"
 msgstr "/مساعدة/_حول"
 
-#: src/yelp-window.c:351
+#: src/yelp-window.c:334
 msgid "Help Browser"
 msgstr "متصفح المساعدة"
 
-#: src/yelp-window.c:569 stylesheets/l10n.xml.in.h:61
+#: src/yelp-window.c:552 stylesheets/l10n.xml.in.h:60
 msgid "Section"
 msgstr "فصل"
 
-#: src/yelp-window.c:624
+#: src/yelp-window.c:609
 msgid "Back"
 msgstr "خلف"
 
-#: src/yelp-window.c:625
+#: src/yelp-window.c:610
 msgid "Show previous page in history"
 msgstr "اظهر الصفحة السابقة في التاريخ"
 
-#: src/yelp-window.c:635
+#: src/yelp-window.c:620
 msgid "Forward"
 msgstr "تقديم"
 
-#: src/yelp-window.c:636
+#: src/yelp-window.c:621
 msgid "Show next page in history"
 msgstr "اظهر الصفحة التالية في التاريخ"
 
-#: src/yelp-window.c:648
+#: src/yelp-window.c:633
 msgid "Home"
 msgstr "الدليل المنزلي"
 
-#: src/yelp-window.c:649
+#: src/yelp-window.c:634
 msgid "Go to home view"
 msgstr "اذهب إلى المشهد المنزلي"
 
-#: src/yelp-window.c:859
+#: src/yelp-window.c:844
 msgid "Loading..."
 msgstr "جاري التحميل..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1290
+#: src/yelp-window.c:1267
 msgid "translator_credits"
 msgstr ""
 "تحت إشراف عرب آيز (http://www.arabeyes.org):عرفات المديني، تونس "
 "<lumina@silverpen.de>محمد جمال، مصر محمد عصر، مصر سيد جعفر الموسوي، البحرين، "
 "عصام بيازيدي، الأردن نور الدين أمين آغة، العربية السعودية "
 
-#: src/yelp-window.c:1295
+#: src/yelp-window.c:1272
 msgid "A Help Browser for GNOME"
 msgstr "متصفح مساعدة لجنوم"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "حول هذا المقال"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "حول هذه الببليوغرافيا"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "حول هذا الكتاب"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "حول هذا الفصل"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "حول هذه الخانة"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "حول قاموس المصطلحات هذا"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "حول هذا الفهرس"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "حول هذا الجزء"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "حول هذه المقدمة"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "حول هذا المرجع"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "حول هذا القسم"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "حول هذه المجموعة"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "تطبيقات"
+msgstr "الإنتساب"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "الملحق"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "المقال"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "الجمهور"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "المؤلف"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "المؤلفين"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "ببليوغرافيا"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "الكتاب"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "إنتبه"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "الفصل"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "المتعاون"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "المتعاونون"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "الورقة الأخيرة المحتوية على معلومات حول الناشر و الكاتب الخ (لم تعد مستخدمة)"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "حقق النشر"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "حقوق النشر"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "التاريخ"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "فصل"
+msgstr "الإخلاص"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "محررات"
+msgstr "محرر"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "البريد الإلكتروني"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "مثال"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "المظهر"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "قاموس المصطلحات"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "مهم"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -568,110 +558,103 @@ msgstr "فهرس"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "ملاحظة قانونية"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "المستوى"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "جمهور الرسالة"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "مستوى الرسالة"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "مصدر الرسالة"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "ملاحظة"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "المصدر"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "مساهم آخر"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "مساهمون آخرون"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "جزء"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "المقدمة"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "الناشر"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "الناشرون"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "المرجع"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "خانة المرجع"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "قسم المرجع"
 
 #: stylesheets/l10n.xml.in.h:59
-msgid "Release Information"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "تاريخ التنقيح"
+
+#: stylesheets/l10n.xml.in.h:61
+msgid "See"
+msgstr "راجع"
 
 #: stylesheets/l10n.xml.in.h:62
-msgid "See"
-msgstr ""
+msgid "See Also"
+msgstr "راجع كذلك"
 
 #: stylesheets/l10n.xml.in.h:63
-msgid "See Also"
-msgstr ""
+msgid "Set Index"
+msgstr "تحديد الفهرس"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
-msgid "Set Index"
-msgstr "فهرس"
+msgid "Table"
+msgstr "الجدول"
 
 #: stylesheets/l10n.xml.in.h:65
-msgid "Table"
-msgstr ""
+msgid "Table of Contents"
+msgstr "جدول المحتويات"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
-msgid "Table of Contents"
-msgstr "محتويات المساعدة"
+msgid "Tip"
+msgstr "تلميحة"
 
 #: stylesheets/l10n.xml.in.h:67
-msgid "Tip"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:68
-#, fuzzy
 msgid "Title"
-msgstr "عنوان الصفحة"
+msgstr "العنوان"
 
-#: stylesheets/l10n.xml.in.h:70
+#: stylesheets/l10n.xml.in.h:69
 msgid "Warning"
-msgstr ""
+msgstr "تنبيه"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
