--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-16  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	- Patch from Julio M. Merino Vidal for portable sed usage (#134534)
+
 2004-02-15  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
